# rustframes

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  output.csv
.github/workflows/: ci.yml
benches/: array_benchmarks.rs  dataframe_benchmarks.rs
examples/: array_demo.rs  dataframe_demo.rs  demo.rs
src/: lib.rs
src/array/: array.rs  core.rs  gpu.rs  linalg.rs  mod.rs  ops.rs  simd_ops.rs
src/dataframe/: advanced_ops.rs  arrow.rs  core.rs  dataframe.rs  groupby.rs  io.rs  mod.rs  series.rs  window.rs
src/python/: mod.rs
tests/: test_array.rs  test_dataframe.rs
tests/data/: test.csv
