[package]
name = "rustframes"
version = "0.1.0"
edition = "2021"
authors = ["Ryan Tobin <ryantobin119@gmail.com>"]
description = "A blazing-fast, memory-safe alternative to NumPy + Pandas, written in Rust."
license = "MIT OR Apache-2.0"
repository = "https://github.com/ryan-tobin/rustframes"
documentation = "https://docs.rs/rustframes"
readme = "README.md"
keywords = ["dataframe", "numpy", "pandas", "rust", "array"]
categories = ["data-structures", "science", "mathematics"]

[dependencies]
csv = "1.3.1"
num-traits = "0.2.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.0"

[[bench]]
name = "array_bench"
harness = false

[features]
default = []
simd = []
gpu = []
